--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/splide.min.css" />
     <link rel="stylesheet" href="style.css" />
 
-    <!-- <script
+    <script
       src="https://kit.fontawesome.com/c664494976.js"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
 
     <script src="https://code.jquery.com/jquery-migrate-3.3.2.js"></script>
   </head>
